# nonebot-plugin-cchess

./: README.md  pyproject.toml
nonebot_plugin_cchess/: __init__.py  board.py  config.py  drawer.py  engine.py  game.py  model.py  move.py  piece.py
nonebot_plugin_cchess/migrations/: 2c0cbe227dd9_init_db.py  3c19beaf3015_init_db.py  7e82150eaa17_init_db.py  8e24973393ea_add_game_id.py
